# tronz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  Makefile  README.md  _typos.toml  release-plz.toml  release.toml  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/workflows/: ci.yml  release-plz.yml
crates/abi/: Cargo.toml  README.md
crates/abi/src/: abi.rs  alloy.rs  error.rs  item.rs  lib.rs  param.rs
crates/contract/: Cargo.toml  README.md
crates/contract/src/: call.rs  deploy.rs  error.rs  event.rs  event_filter.rs  instance.rs  interface.rs  lib.rs  sol_call.rs
crates/contract/src/trc20/: instance.rs  mod.rs
crates/contract/src/trc721/: instance.rs  mod.rs
crates/contract/tests/: sol_macro.rs
crates/contract/tests/abi/: erc20.json  erc20_forge.json
crates/primitives/: README.md
crates/primitives/src/: address.rs  amount.rs  error.rs  lib.rs  log.rs  message.rs  signature.rs
crates/provider/: Cargo.toml  README.md  build.rs
crates/provider/benches/: observability.rs
crates/provider/proto/tron/api/: api.proto
crates/provider/src/: error.rs  lib.rs  observability.rs  test_utils.rs
crates/provider/src/builders/: account.rs  contract.rs  delegate.rs  freeze.rs  mod.rs  permission.rs  rewards.rs  transfer.rs  vote.rs  withdraw.rs
crates/provider/src/ext/: exchange.rs  governance.rs  market.rs  trc10.rs  witness.rs
crates/provider/src/fillers/: mod.rs
crates/provider/src/provider/: builder.rs  mod.rs  pending.rs  root.rs  solidity.rs
crates/provider/src/transport/: mock.rs  mod.rs  solidity.rs
crates/provider/src/transport/grpc/: abi.rs  capture.rs  codec.rs  core.rs  fullnode.rs  light_block.rs  mod.rs  solidity.rs
crates/provider/src/types/: account.rs  block.rs  contract.rs  market.rs  mod.rs  network.rs  receipt.rs  transaction.rs  trc10.rs
crates/provider/tests/: integration.rs  observability.rs  solidity_transport.rs
crates/provider/tests/support/: Cargo.toml  build.rs  generated.rs  mod.rs  observability.proto
crates/provider/tests/support/proto/: wallet_solidity_test.proto
crates/provider/tests/support/src/: lib.rs
crates/signer/: README.md
crates/signer-aws/: Cargo.toml  README.md
crates/signer-aws/src/: lib.rs  signer.rs
crates/signer/src/: error.rs  keystore.rs  local.rs  mnemonic.rs  signer.rs
crates/sol-macro/: Cargo.toml
crates/sol-macro/src/: lib.rs
crates/tronz/: Cargo.toml  README.md
crates/tronz/src/: lib.rs
crates/tronz/tests/: tron_sol.rs
docs/: README.md  contracts.md  getting-started.md  governance-witness.md  local-node.md  providers.md  signers.md  staking.md  testing.md  transactions.md  trc10.md
examples/: README.md
examples/accounts/: Cargo.toml
examples/accounts/examples/: account_create.rs  account_permissions.rs  account_update.rs
examples/contracts/: Cargo.toml
examples/contracts/examples/: contract_call.rs  contract_deploy.rs  contract_dynamic_abi.rs  contract_estimate_energy.rs  contract_revert.rs  contract_send.rs  decode_log.rs  decode_receipt.rs
examples/examples/: account_create.rs  account_permissions.rs  account_update.rs  address_formats.rs  amount_math.rs  claim_rewards.rs  connect_custom.rs  contract_call.rs  contract_deploy.rs  contract_dynamic_abi.rs  contract_estimate_energy.rs  contract_revert.rs  contract_send.rs  decode_log.rs  delegate.rs  list_witnesses.rs  signer_generate.rs  signer_local.rs  stake_bandwidth.rs  transfer_trx_memo.rs  trc10_balance.rs  trc10_issue.rs  trc10_query.rs  trc10_transfer.rs  trc20_decode_transfer_event.rs  trc20_transfer_from.rs  unfreeze.rs  vote_witness.rs  withdraw_unfreeze.rs
examples/queries/: Cargo.toml
examples/queries/examples/: address_formats.rs  amount_math.rs  connect_custom.rs  governance_list.rs  list_witnesses.rs  query.rs
examples/signers/: Cargo.toml
examples/signers/examples/: signer_generate.rs  signer_keystore.rs  signer_local.rs  signer_mnemonic.rs
examples/staking/: Cargo.toml
examples/staking/examples/: cancel_unfreeze.rs  claim_rewards.rs  delegate.rs  stake.rs  stake_bandwidth.rs  stake_v1.rs  undelegate.rs  unfreeze.rs  vote_witness.rs  withdraw_unfreeze.rs
examples/transfers/: Cargo.toml
examples/transfers/examples/: transfer_trx.rs  transfer_trx_memo.rs
examples/trc10/: Cargo.toml
examples/trc10/examples/: trc10_balance.rs  trc10_by_name.rs  trc10_issue.rs  trc10_query.rs  trc10_transfer.rs
examples/trc20/: Cargo.toml
examples/trc20/examples/: trc20.rs  trc20_approve.rs  trc20_decode_transfer_event.rs  trc20_transfer_from.rs
