[package]
name         = "tronz-provider"
description  = "TRON domain model, gRPC transport, and provider for the tronz SDK."
keywords     = ["tron", "blockchain", "grpc", "cryptocurrency", "provider"]
categories   = ["cryptography::cryptocurrencies", "network-programming", "api-bindings", "asynchronous"]
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
build        = "build.rs"

[dependencies]
tronz-primitives = { workspace = true }
tronz-signer     = { workspace = true }

prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true }
tonic-prost = { workspace = true }
sha2        = { workspace = true }
serde_json  = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
fastrand    = { workspace = true }

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[features]
default = ["grpc-tls"]
# gRPC transport with TLS (connects to TronGrid grpc.trongrid.io:443)
grpc-tls = ["tonic/tls-native-roots"]
# gRPC without TLS (plain HTTP/2, local nodes)
grpc = []
# In-memory `MockTransport` for testing without a live node.
mock = []

[dev-dependencies]
tronz-primitives = { workspace = true }
tronz-signer     = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
