[package]
name         = "tronz"
description  = "Idiomatic, async-first Rust SDK for the TRON network."
keywords     = ["tron", "blockchain", "grpc", "cryptocurrency", "smart-contracts"]
categories   = ["cryptography::cryptocurrencies", "network-programming", "api-bindings", "asynchronous"]
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = { workspace = true }

[package.metadata.release]
# Create one workspace release tag; all other crates inherit `tag = false`.
tag      = true
tag-name = "v{{version}}"

[dependencies]
tronz-primitives = { workspace = true }
tronz-abi        = { workspace = true }
tronz-signer     = { workspace = true }
tronz-provider   = { workspace = true }
tronz-contract   = { workspace = true, optional = true, features = ["provider"] }
tronz-signer-aws = { workspace = true, optional = true }

[features]
default = ["provider-grpc-tls", "contract", "signer-local"]
full    = ["default"]

# Transport backends (forwarded to tronz-provider).
provider-grpc-tls = ["tronz-provider/grpc-tls"]
provider-grpc     = ["tronz-provider/grpc"]
# Contract bindings (TRC20/TRC721).
contract = ["dep:tronz-contract"]
# LocalSigner is always compiled in tronz-signer; this is a documentation flag.
signer-local = []
# BIP-39 mnemonic + BIP-44 HD key derivation.
signer-mnemonic = ["tronz-signer/mnemonic"]
# Web3 Secret Storage V3 keystore.
signer-keystore = ["tronz-signer/keystore"]
# AWS KMS signer (private key stays in the HSM).
signer-aws = ["dep:tronz-signer-aws"]
