[package]
name         = "examples-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
tronz.workspace            = true
tokio.workspace            = true
anyhow.workspace           = true
hex.workspace              = true
alloy-primitives.workspace = true
alloy-dyn-abi.workspace    = true
alloy-json-abi.workspace   = true
serde_json.workspace       = true
