[package]
name         = "examples-signers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
tronz.workspace    = true
tokio.workspace    = true
anyhow.workspace   = true
tempfile.workspace = true
hex.workspace        = true
k256.workspace       = true
rand.workspace       = true
serde_json.workspace = true
